dataset1235/2025-2/805158916/users/674524038/executions/2651470117_2667036473.log
== RUN (2025-08-20 15:29:51)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius")
#Fórmula de conversão para Kelvin
tempK = tempC + 273.15
#Saída
print(round(tempK, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:28:39)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius")
#Fórmula de conversão para Kelvin
tempK = tempC + 273.15
#Saída
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:28:48)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius")
#Fórmula de conversão para Kelvin
tempK = tempC+273.15
#Saída
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:28:41)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius")
#Fórmula de conversão para Kelvin
tempK = tempC + 273.15
#Saída
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 15:31:12)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius: "))
#Fórmula de conversão para Kelvin
tempK = tempC + 273.15
#Saída
print(round(tempK, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira temperatura em Celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira temperatura em Celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira temperatura em Celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira temperatura em Celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira temperatura em Celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira temperatura em Celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:28:38)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius")
#Fórmula de conversão para Kelvin
tempK = tempC + 273.15
#Saída
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:28:04)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius")
#Fórmula de conversão para Kelvin
tempK = tempC + 273.15
#Saída
print(tempK,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:29:50)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius")
#Fórmula de conversão para Kelvin
tempK = tempC + 273.15
#Saída
print(round(tempK, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    tempC = float(input("Insira temperatura em Celsius")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:30:19)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius"))
#Fórmula de conversão para Kelvin
tempK = tempC + 273.15
#Saída
print(round(tempK, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira temperatura em Celsius293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira temperatura em Celsius263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira temperatura em Celsius233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira temperatura em Celsius373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira temperatura em Celsius273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira temperatura em Celsius303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:30:29)
-- CODE: 
#Início
#Temperatura em Celsius
tempC = float(input("Insira temperatura em Celsius: "))
#Fórmula de conversão para Kelvin
tempK = tempC + 273.15
#Saída
print(round(tempK, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira temperatura em Celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira temperatura em Celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira temperatura em Celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira temperatura em Celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira temperatura em Celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira temperatura em Celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
